...
        android:id="@+id/nav_login_client"
        android:name="com.example.opsc7312poepart2_code.ui.login_client.LoginClientFragment"
        android:label="Login - Client"
        tools:layout="@layout/fragment_login_client" >
        <action
            android:id="@+id/action_nav_login_client_to_nav_menu_client"
            app:destination="@id/nav_menu_client" />
        <action
            android:id="@+id/action_nav_login_client_to_nav_forget_password_client"
            app:destination="@id/nav_forget_password_client" />
    </fragment>

    <fragment
...
        tools:layout="@layout/fragment_book_app_client1" >
        <action
            android:id="@+id/action_nav_book_app_client1_to_nav_menu_client"
            app:destination="@id/nav_menu_client" />
        <action
            android:id="@+id/action_nav_book_app_client1_to_nav_book_app_client2"
            app:destination="@id/nav_book_app_client2" />
        <action
            android:id="@+id/action_nav_book_app_client1_to_nav_dentist_maps"
            app:destination="@id/nav_dentist_maps" />

    </fragment>

...
