...
    tools:context=".ui.client_settings.ClientSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/ibtnHome"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/lightblue"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
...
